tests/vendor/valid/trivial/paren_3.c
//expect 4
//tags: trivial, unary
int main() {
    return -(-4);
}