tests/vendor/invalid/syntax/wrong_order.c
//tags: trivial
int main(void) {
    return 4-;
}